--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,10 +6,10 @@
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_home" />
 
-    <item
-        android:id="@+id/search_this"
-        android:icon="@drawable/ic_search_black_24dp"
-        android:title="@string/search" />
+    <!--<item-->
+        <!--android:id="@+id/search_this"-->
+        <!--android:icon="@drawable/ic_search_black_24dp"-->
+        <!--android:title="@string/search" />-->
 
     <item
         android:id="@+id/favourite_this"
