--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,29 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/event_maber"
-        android:id="@+id/edit_username"
-        android:layout_marginTop="100dp"
-        android:inputType="" />
-    <EditText
-        android:id="@+id/edit_keyword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/location"
-        android:layout_below="@+id/edit_username"
-        android:inputType="" />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/search_this"
-        android:background="@color/colorTextIcons"
-        android:textColor="@color/colorPrimaryDark"
-        android:id="@+id/search_repos"
-        android:layout_below="@+id/edit_keyword"/>
 
 
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recyclerView"/>
 </RelativeLayout>
