--- a/app/src/main/res/drawable/rectangle.xml
+++ b/app/src/main/res/drawable/rectangle.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#ffffff">
-
-    </solid>
+    <gradient android:startColor="@color/secondaryDarkColor"
+        android:endColor="@color/translucentSecondaryDarkColor"/>
     <corners android:radius="5dp"/>
-    <stroke android:color="@color/colorTextIcons" android:width="2dp"/>
 
 </shape>
